@@ -1,5 +1,5 @@
 .\"
-.\" $Id: greylist.conf.5,v 1.63 2007/02/05 06:05:34 manu Exp $
+.\" $Id: greylist.conf.5,v 1.64 2007/02/06 14:29:55 manu Exp $
 .\"
 .\" Copyright (c) 2004-2007 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -786,9 +786,10 @@ Like the
 command line option, this keyword is used to specify the socket used
 to communicate with
 .B sendmail(8)\fR.
-It must be enclosed in quotes:
+It must be enclosed in quotes and can optionally be followed by a permission mode
+(valid values are 666, 660 or 600, other values cause an error):
 .IP
-  socket "/var/milter-greylist/milter-greylist.sock"
+  socket "/var/milter-greylist/milter-greylist.sock" 660
 .TP
 .I user
 This keyword should be followed by a quoted user login and optionally a 
