@@ -10,6 +10,7 @@
 	Fix warning for Postfix build (Nerijus Baliunas)
 	%g for substitution by regex back references
 	%I for susbtitution by sender IP masked by a CIDR
+	Allow specifying socket mode in config file
 3.1.4
 	Add support for switching to a given group (Ralf S. Engelschall)
 	Add substitutions for sendmail macro and strftime in URL checks
